Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117097

[Windows] Sporadic crash on QNetworkConnectionEvents::getNetworkConnectionFromAdapterGuid()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.4, 6.6.1, 6.7.0 FF
    • 6.5.2
    • Network
    • None
    • Windows
    • 6b4cc9bf7 (dev), a7e0d6ebd (6.6), b5183fd23 (6.5)

      I just see such crashes among our users crash reports.
      Unfortunately it's not reproduced for me locally, so I have no much details, sorry.

      Unhandled exception at 0x00007FF8F7A0F50B (Qt6Network.dll) in minidump (51).dmp: 0xC0000005: Access violation reading location 0x0000000000000000.
      

      Call stack:

      >	Qt6Network.dll!QNetworkConnectionEvents::getNetworkConnectionFromAdapterGuid(QUuid guid) Line 171	C++
       	Qt6Network.dll!QNetworkConnectionEvents::setTarget(const QNetworkInterface & iface) Line 249	C++
       	Qt6Network.dll!QNetworkConnectionMonitorPrivate::setTargets(const QHostAddress & local, const QHostAddress & remote) Line 336	C++
       	Qt6Network.dll!QHttpNetworkConnectionChannel::_q_connected() Line 892	C++
       	Qt6Network.dll!QHttpNetworkConnectionChannel::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 250	C++
       	Qt6Core.dll!doActivate<0>(QObject * sender, int signal_index, void * * argv) Line 4009	C++
       	Qt6Core.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 4053	C++
       	Qt6Network.dll!QSslSocketPrivate::_q_connectedSlot() Line 2467	C++
       	Qt6Core.dll!doActivate<0>(QObject * sender, int signal_index, void * * argv) Line 4009	C++
       	Qt6Core.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 4053	C++
       	Qt6Network.dll!QAbstractSocketPrivate::_q_testConnection() Line 1086	C++
       	[Inline Frame] Qt6Network.dll!QNativeSocketEngine::connectionNotification() Line 597	C++
       	Qt6Network.dll!QWriteNotifier::event(QEvent * e) Line 1274	C++
       	Qt6Widgets.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3289	C++
       	Qt6Widgets.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3241	C++
       	Qt6Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1118	C++
       	Qt6Core.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned __int64 wp, __int64 lp) Line 151	C++
       	user32.dll!UserCallWinProcCheckWow()	Unknown
       	user32.dll!DispatchMessageWorker()	Unknown
       	Qt6Core.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 533	C++
       	[Inline Frame] Qt6Core.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag>) Line 100	C++
       	Qt6Core.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 182	C++
       	Qt6Core.dll!QThread::exec() Line 578	C++
       	Qt6Core.dll!QThreadPrivate::start(void * arg) Line 292	C++
       	kernel32.dll!BaseThreadInitThunk()	Unknown
       	ntdll.dll!RtlUserThreadStart()	Unknown
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            studiosus Vladimir Belyavsky
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes